--- a/mysql-server-operator/helm-charts/mysql-server-operator/templates/workload.yaml
+++ b/mysql-server-operator/helm-charts/mysql-server-operator/templates/workload.yaml
@@ -24,6 +24,8 @@ metadata:
 spec:
   ports:
   - port: {{ $port }}
+    targetPort: mysql
+    protocol: TCP
   selector:
     app: {{ $name }}
 ---
