--- a/core-webapp-operator/helm-charts/core-webapp-operator/templates/workload.yaml
+++ b/core-webapp-operator/helm-charts/core-webapp-operator/templates/workload.yaml
@@ -1,3 +1,9 @@
+{{- range $key, $value := .Values.resources }}
+{{- $resource := lookup "core.keapio.com/v1alpha1" "ProvisionedService" $.Release.Namespace $value -}}
+{{- if not $resource }}
+  {{- fail (printf "Error: ProvisionedService '%s' not found in namespace '%s'." $value $.Release.Namespace) -}}
+{{- end }}
+{{- end }}
 {{- $name := .Release.Name | lower -}}
 ---
 apiVersion: apps/v1
@@ -47,6 +53,9 @@ apiVersion: servicebinding.io/v1
 kind: ServiceBinding
 metadata:
   name: {{ $name }}-{{ $key }}
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "0"
 spec:
   service:
     apiVersion: core.keapio.com/v1alpha1
