--- a/mysql-database-operator/helm-charts/mysql-database-operator/templates/workload.yaml
+++ b/mysql-database-operator/helm-charts/mysql-database-operator/templates/workload.yaml
@@ -93,21 +93,13 @@ spec:
                     MYSQL_HOST=$(cat "$binding/host")
                     MYSQL_PORT=$(cat "$binding/port")
                     
-                    # Export them as environment variables
-                    export MYSQL_USERNAME
-                    export MYSQL_PASSWORD
-                    export MYSQL_HOST
-                    export MYSQL_PORT
-                    
-                    echo "MySQL environment variables set"
+                    echo "MySQL variables set"
 
                     USER_NAME="{{ $username }}"
                     USER_PASSWORD="{{ $password }}"
                     DATABASE="{{ $database }}"
 
                     echo "Creating database and granting privileges..."
-
-                    echo "mysql -h$MYSQL_HOST -P$MYSQL_PORT -u$MYSQL_USERNAME -p$MYSQL_PASSWORD"
 
                     mysql -h$MYSQL_HOST -P$MYSQL_PORT -u$MYSQL_USERNAME -p$MYSQL_PASSWORD -e "
 
