--- a/mysql-user-operator/helm-charts/mysql-user-operator/templates/workspace.yaml
+++ b/mysql-user-operator/helm-charts/mysql-user-operator/templates/workspace.yaml
@@ -102,13 +102,7 @@ spec:
                     MYSQL_HOST=$(cat "$binding/host")
                     MYSQL_PORT=$(cat "$binding/port")
                     
-                    # Export them as environment variables
-                    export MYSQL_USERNAME
-                    export MYSQL_PASSWORD
-                    export MYSQL_HOST
-                    export MYSQL_PORT
-                    
-                    echo "MySQL environment variables set"
+                    echo "MySQL variables set"
 
                     # Create a new user and grant privileges
                     USER_NAME="{{ $username }}"
