--- a/mysql-database-operator/helm-charts/mysql-database-operator/templates/workload.yaml
+++ b/mysql-database-operator/helm-charts/mysql-database-operator/templates/workload.yaml
@@ -1,12 +1,12 @@
 {{- $resource := lookup "core.keapio.com/v1alpha1" "ProvisionedService" .Release.Namespace .Values.server -}}
-{{- if not $resource }}
-  {{- fail (printf "Error: ProvisionedService '%s' not found in namespace '%s'." .Values.server .Release.Namespace) -}}
-{{- end }}
+{{- if or (not $resource) (not $resource.status.binding.name) -}}
+  {{- fail (printf "Error: ProvisionedService '%s' or binding not found in namespace '%s'." .Values.server .Release.Namespace) -}}
+{{- end -}}
 {{- $bindingName := $resource.status.binding.name -}}
 {{- $binding := lookup "v1" "Secret" .Release.Namespace $bindingName -}}
-{{- if not $binding }}
+{{- if not $binding -}}
   {{- fail (printf "Error: Secret '%s' not found in namespace '%s'." $bindingName .Release.Namespace) -}}
-{{- end }}
+{{- end -}}
 {{- $host := $binding.data.host | b64dec -}}
 {{- $port := $binding.data.port | b64dec -}}
 {{- $name := .Release.Name | lower -}}
@@ -27,13 +27,6 @@ stringData:
   database: {{ $database }}
   username: {{ $username }}
   password: {{ $password }}
----
-apiVersion: core.keapio.com/v1alpha1
-kind: ProvisionedService
-metadata:
-  name: {{ $name }}
-spec:
-  name: {{ $name }}
 ---
 apiVersion: servicebinding.io/v1
 kind: ServiceBinding
@@ -128,13 +121,23 @@ spec:
       restartPolicy: Never
   backoffLimit: 4
 ---
+apiVersion: core.keapio.com/v1alpha1
+kind: ProvisionedService
+metadata:
+  name: {{ $name }}
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "1"  
+spec:
+  name: {{ $name }}
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ $name }}-1
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-weight": "1"
+    "helm.sh/hook-weight": "2"
 spec:
   template:
     spec:
